--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>javascript</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>hello world</h1>
+    <ul class="list">
+      <li>hi</li>
+      <li>how</li>
+      <li>are</li>
+      <li>you</li>
+      <li>dude</li>
+    </ul>
     <!-- we use javascript like this...It should be the last thing we should write -->
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
